<resources>
    <string name="app_name">Calculator</string>
    <string name="input">Input</string>
    <string name="calc">Calc</string>
    <string name="quit">Quit</string>
    <string name="NUMBER_1">Первое число</string>
    <string name="NUMBER_2">Второе число</string>
    <string name="SUMMA">Сумма</string>
    <string name="MAX_DIVISOR">Максимальный делитель</string>
    <string name="MULTIPLY">Умножение</string>
    <string name="type1">Грузовой</string>
    <string name="type2">Обычный</string>
</resources>